		Students: addition of new sub-action to allow viewing of full student profiles, without Notes
		Students: added date range to Form Group Summary report
		Students: increased length of student search field
		Students: fixed PHP error on Application Form edit process, when there are no roll groups to select
		Students: interface string fix in Roll Group Summary
		System Admin: added ability to custom order module categories in main menu
		System Admin: added system check page with version & extension information
		System Admin: coloured rows for inactive module in Manage Modules
		System Admin: fixed PHP notice in Manage Modules when un-installed modules present
		Timetable: more graceful fail when getting Google Calendar and refreshToken is not present
		Timetable: PHP Notice fix on heigh constant
		Timetable: fixed typo in class edit view
		Timetable: fixed bug preventing Master Timetable from showing classes with on location
		Timetable: added period times to titles in master timetable
		Timetable Admin: removed Left users from exception add screen
		Timetable Admin: narrowed down class participant count in Course edit view to users with status Full
		Timetable Admin: added search and filters to course enrolment and course management pages
		Timetable Admin: added bulk action to copy selected students to another class
		Timetable Admin: code clean up on bulk actions when managing course enrolment by class
		Timetable Admin: removed required field notice on location field when editing a class in a timetable
		User Admin: fixed PHP Notice issue in user import
		User Admin: tweaked link to family from Manage Users to fix year group no-show issue
		User Admin: fixed PHP Notice issue in student enrolment import
		User Admin: fixed mime-type issue in user image import function
		User Admin: added student ID to search in Manage Users
		User Admin: added birth certificate scan field in Manage Users
		User Admin: hide inactive modules under Manage Permissions